--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2524,7 +2524,7 @@ textarea {
   border-bottom: 1px solid transparent;
   color: $menu-color-text;
   font-size: em($font-size-base + 1px);
-  
+
     @if $font-bold-menu {
     font-weight: bold;
   }
@@ -3648,7 +3648,7 @@ $color-blankstate-background: rgba($color-body-text, 0.1);
   .product-single__thumbnail {
     width: 75px;
   }
-  
+
   .thumbnails-slider__next {
     right: 0;
   }
@@ -5918,7 +5918,7 @@ $transition-controls-slideshow: color 0.2s $ease-transition, background-color 0.
 .price__sale {
   color: $color-sale-text;
   display: none;
-  
+
   .price--on-sale & {
     display: block;
   }
@@ -7414,16 +7414,16 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 
 .product-description-area {
 	margin-top:50px;
-	
+
 	ul, ol {list-style-type:none;}
-	
-	.tabs {		
+
+	.tabs {
 		margin:0 0 -1px 10px;
 		display:-webkit-flex;
 		display:flex;
 		flex-flow:row wrap;
-		
-		li a {			
+
+		li a {
 			border:solid 1px transparent;
 			color:$color-body-text;
 			display:block;
@@ -7440,7 +7440,7 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 		border:solid 0px $color-border;
 		list-style-type:none;
 		margin:0;
-		
+
 		>li {
 			display:none;
 			padding:10px;
@@ -7461,21 +7461,21 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 
 .filter-block__collection-tags {
 	list-style-type:none;
-	position: relative;	
+	position: relative;
 }
 .filter-block__title {margin: 10px 0;}
 .filter-tag-list {
-	
-	li {	
+
+	li {
 		margin: 0;
 		position:relative;
-		
+
 		a {
 			color: $link-color-text;
 			margin-left: 20px;
-			
+
 			&:hover {color: $color-body-text;}
-			
+
 			&:before {
 				content: "";
 				display: inline-block;
@@ -7512,7 +7512,7 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
     right: 20px;
     top: -35px;
     font-size: 0.8em;
-	
+
 	a:before {
 		content: "x";
 		display:block !important;
@@ -7520,7 +7520,7 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 		right: -16px;
 		left: auto;
 		top: 0px;
-	} 
+	}
 }
 
 #coupon-text {
@@ -7547,17 +7547,17 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
       width: 48.5%;
       vertical-align: middle;
     }
-    
+
     .site-header__icons {
       display: block;
     }
-    
+
     .site-header__icon {
       position: relative;
       top: -2px;
     }
   }
-  
+
   .mobile-nav-wrapper.js-menu--is-open {
     transform: translateY(100px) !important;
   }
@@ -7566,5 +7566,7 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 #shopify-section-1570634612215, #shopify-section-16306242790334ae89 {
   margin-top: -20px;
 }
+
+/* MODIFICATIONS */
 
 #stock-info { display: none; }
