--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7570,3 +7570,6 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 /* MODIFICATIONS */
 
 #stock-info { display: none; }
+.flex{display:flex;}
+.font-bold{font-weight: bold;}
+.w-100 {width:100%;}
