theme.scss -> body_html

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7573,3 +7573,204 @@ $transition-controls-video: color 0.2s $ease-transition, background-color 0.2s $
 .flex{display:flex;}
 .font-bold{font-weight: bold;}
 .w-100 {width:100%;}
+
+.row {
+  display: flex;
+  width: 100%;
+}
+
+.nitty-gritty-section-title {
+  font-size: 1.3em;
+  color: #2f7fba; }
+
+.nitty-gritty-feature-title {
+  width: 130px; }
+
+.nitty-gritty-feature-title-bubble {
+  width: 100px; }
+
+
+.product-page-specs-section-spacer {
+  height: 8px;
+  clear: both; }
+
+.product-page-specs-force-width {
+  width: 120px; }
+
+.product-page-specs {
+  margin-top: 10px;
+  color: #5b5c5f;
+  font-weight: 700;
+  font-family: "Ruda", sans-serif;
+  width: 100%; }
+
+.product-page-specs-section-title {
+  float: left;
+  color: #5b5c5f;
+  font-weight: 700;
+  font-family: "Ruda", sans-serif; }
+
+.product-page-specs-section-value, .product-page-specs-section-mini-text, .product-page-specs-section-value-right {
+  color: #5b5c5f;
+  font-weight: 400;
+  font-family: "Ruda", sans-serif; }
+
+.product-page-specs-section-value-right {
+  float: right; }
+
+.product-page-specs-section-mini-text {
+  font-size: .8em;
+  clear: both; }
+/*table.product-page-specs tr {
+  border-top: 1px solid #939598; }*/
+
+table.product-page-specs tr > td:nth-child(1) {
+  vertical-align: top; }
+
+.nitty-gritty-section-spacer {
+  height: 20px;
+  width: 100px; }
+
+.nitty-gritty-section {
+  border-top: none !important;
+}
+
+.nitty-gritty-section-title {
+  font-size: 1.3em;
+  color: #2f7fba;
+}
+
+.product-guide-intro-text {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+#clipboard-dimensions-copy { display: none;}
+
+.warranty-fine-print-container {
+  text-align: center;
+  color: #5b5c5f;
+  font-weight: 700;
+  font-family: "Ruda", sans-serif;
+  margin-top: 40px; }
+
+#warranty-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+}
+.warranty-section {
+  width: 33%;
+}
+
+.warranty-section-title-primary {
+  color: #5b5c5f;
+  font-weight: 900;
+  font-family: "Ruda", sans-serif;
+  font-size: 1.38em; }
+
+.warranty-benefit-title {
+  color: #5b5c5f;
+  font-weight: 900;
+  font-family: "Ruda", sans-serif;
+  font-size: 1.13em; }
+
+.product-guide-hook{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.warranty-fine-print-text {
+  text-align: center;
+  color: #5b5c5f;
+  font-weight: 400;
+  font-family: "Ruda", sans-serif;
+  font-size: 1.7em;
+  padding: 0;
+  text-decoration: underline;
+}
+
+
+  #building-in-dimensions tr > td:nth-child(2) {
+    border-left: 1px solid white; }
+
+  #building-in-dimensions th {
+    padding: 10px;
+    color: #5b5c5f;
+    font-weight: 900;
+    font-family: "Ruda", sans-serif;
+    color: black; }
+
+  #building-in-dimensions td {
+    padding: 10px;
+    color: #5b5c5f;
+    font-weight: 400;
+    font-family: "Ruda", sans-serif;
+    color: black; }
+
+  #building-in-dimensions tr:nth-child(2) {
+    background-color: #7280A3; }
+
+  #building-in-dimensions tr:nth-child(3) {
+    background-color: #EF545C; }
+
+  #building-in-dimensions tr:nth-child(4) {
+    background-color: #6ABD45; }
+
+    .product-guide-header-image-large {
+      display: none; }
+
+    .product-guide-header {
+      overflow: hidden; }
+
+    @media (min-width: 1120px) {
+      .nitty-gritty-feature-list {
+        padding-left: 40px; }
+      .warranty-summary-title {
+        float: left;
+        width: 80px; }
+      .product-guide-intro-text-description p {
+        font-size: 1em;
+        padding: 2px 0px; }
+      #product-guide-full-description {
+        padding: 0px 410px 0px 80px; }
+      #product-guide-intro-text-energy-cost {
+        font-size: 2em;
+        height: 40px;
+        line-height: 40px; }
+      #noise-graph {
+        float: none; }
+      .product-guide-intro-text-description {
+        width: 100%;
+        display: block; }
+      .product-guide-intro-text-link {
+        width: 100%;
+        display: block;
+        font-size: 1em; }
+      .product-guide-intro-text-description {
+        padding: 0; }
+      .product-guide-hook {
+        padding: 25px 85px; }
+      #video-hook {
+        text-align: left; }
+      .product-guide-header-image-small {
+        display: none; }
+      .product-guide-header-image-large {
+        display: inline; }
+      .product-guide-intro-text {
+        width: 100%;
+        text-align: center;
+        display: block; }
+      .product-guide-intro-text-link > hr {
+        width: 60%; }
+      .product-guide-header {
+        position: relative; }
+      .product-guide-carousel-image-container {
+        padding: 0px 50px 0px 50px; }
+      .product-guide-main-menu {
+        left: 0px; }
+      #product-guide-intro-text-noise-graph {
+        margin-bottom: 30px; } }
